<resources>
    <string name="app_name">Morse</string>
    <string name="action_settings">Settings</string>
    <string name="convert">Convert</string>
    <string name="morse_chat">Morse Chat</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="morselower">morse</string>

    <string name="msgnone">Save no messages</string>
    <string name="msgchannel">Save messages by channel</string>
    <string name="msgall">Save all messages</string>
    <string name="channelselect">Select a channel:</string>
</resources>
